--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -21,7 +21,25 @@
         android:id="@+id/recyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-app:layout_constraintTop_toBottomOf="@id/tvMain"
+app:layout_constraintTop_toBottomOf="@id/etBusqueda"
         app:layout_constraintStart_toStartOf="parent"
+
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/etBusqueda"
+        app:layout_constraintTop_toBottomOf="@id/tvMain"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btBusqueda"
+        app:layout_constraintTop_toBottomOf="@id/tvMain"
+        app:layout_constraintStart_toEndOf="@id/etBusqueda"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Buscar"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
